# bevy-steering

./: Cargo.toml  LICENSE-MIT  README.md
examples/: alignment.rs  approach.rs  avoid.rs  boids.rs  cohesion.rs  evasion.rs  flee.rs  line_avoid.rs  maze.rs  neighborhoods.rs  path_following.rs  pursuit.rs  seek.rs  separation.rs  stress_test.rs  wander.rs
src/: agent.rs  control.rs  lib.rs  movement.rs  neighbors.rs  obstacles.rs  plugin.rs  prelude.rs  speed.rs
src/behaviors/: alignment.rs  approach.rs  avoid.rs  cohesion.rs  evasion.rs  flee.rs  mod.rs  path_following.rs  pursuit.rs  seek.rs  separation.rs  wander.rs
