[package]
name = "bevy-steering"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
bevy = "0.17.3"
derivative = "2.2.0"
enum-map = "2.7.3"
itertools = "0.14.0"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }

[[example]]
name = "neighborhoods"

[[example]]
name = "separation"

[[example]]
name = "seek"

[dev-dependencies]
avian3d = { version = "0.4.1", features = ["bevy_diagnostic"] }
vleue_navigator = { version = "0.14.0", features = ["avian3d"] }
