[package]
name = "bevy-steering"
description = "Steering behaviors for the Bevy game engine"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crestonbunch/bevy-steering"

[features]
serialize = ["dep:serde", "avian3d/serialize", "bevy/serialize"]

[dependencies]
avian3d = { version = "0.4.1" }
bevy = "0.17.3"
bitflags = "2"
derivative = "2.2.0"
enum-map = "2.7.3"
itertools = "0.14.0"
rand = "0.9.2"
serde = { version = "1.0.228", optional = true }
strum = { version = "0.27.2", features = ["derive"] }

[[example]]
name = "neighborhoods"

[[example]]
name = "separation"

[[example]]
name = "seek"

[dev-dependencies]
avian3d = { version = "0.4.1", features = ["bevy_diagnostic"] }
vleue_navigator = { version = "0.14.0", features = ["avian3d"] }
